--- a/cadastro.html
+++ b/cadastro.html
@@ -25,6 +25,7 @@
     </form>
     <div id="mensagem"></div>
   </main>
-  <script src="js/cadastro.js"></script>
+  <script type="module" src="js/cadastro.js"></script>
+  <!-- reconhecer o arquivo como um módulo ESM (ECMAScript Module) -->
 </body>
 </html>
