--- a/login.html
+++ b/login.html
@@ -23,6 +23,6 @@
     <p><a href="redefinir-senha.html">Esqueceu a senha?</a></p>
     <div id="mensagem"></div>
   </main>
-  <script src="js/login.js"></script>
+  <script type="module" src="js/login.js"></script>
 </body>
 </html>
