--- a/redefinir-senha.html
+++ b/redefinir-senha.html
@@ -19,6 +19,6 @@
     </form>
     <div id="mensagem"></div>
   </main>
-  <script src="js/redefinir-senha.js"></script>
+  <script type="module" src="js/redefinir-senha.js"></script>
 </body>
 </html>
