--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
   <main>
     <h2>Escolha uma opção para começar</h2>
   </main>
-  <script src="js/app.js"></script>
+  <script type="module" src="js/api.js"></script>
 </body>
 </html>
