--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <nav>
       <a href="cadastro.html">Cadastro</a>
       <a href="login.html">Login</a>
+      <a href="listar-usuarios.html">Listar Usuários</a>
     </nav>
   </header>
   <main>
